fix: change title

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Chatpad AI</title>
-    <meta
+    <title>Segfault GPT</title>
+    <!-- <meta
       name="description"
       content="A free, open-source, and slick UI for ChatGPT"
-    />
+    /> -->
     <meta
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
